--- a/style.css
+++ b/style.css
@@ -1020,6 +1020,55 @@ body {
     .login-containerbutton:hover {
         background-color: #4cae4c;
     }  
+    /* Checkout Page */
+    #checkout-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 50px 20px;
+        background-color: #f9f9f9;
+        border-radius: 10px;
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+        max-width: 500px;
+        margin: auto;
+    }
+    
+    #checkout-form h2 {
+        font-size: 30px;
+        color: #088178;
+        margin-bottom: 20px;
+    }
+    
+    #checkout-form label {
+        font-size: 14px;
+        margin-bottom: 5px;
+        color: #333;
+    }
+    
+    #checkout-form input, 
+    #checkout-form select {
+        padding: 12px;
+        margin-bottom: 20px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        font-size: 16px;
+        width: 100%;
+    }
+    
+    #checkout-form button {
+        padding: 12px;
+        background-color: #088178;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+    }
+    
+    #checkout-form button:hover {
+        background-color: #066f63;
+    }
     
 
      @media  (max-width:799px){
